--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
-body{
-    background-color: chocolate;
+h1{
+ color:yellow
 }
+body{
+    color: brown;
+    background-color:black;
+}
+li{
+    font-style: italic;
+    color:yellow
+}
+h2{
+    
+}
+form{
+    color:grey
+    ;
+}
+button{
+    background-color: blue;
+}
+bod
